flux-parser/tests/snapshots/expr__parse_binops_eq.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        Ident: x
      span:
        range:
          start: 0
          end: 1
        file_id: 0
    op: Eq
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 2
                end: 3
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 1
            span:
              range:
                start: 2
                end: 3
              file_id: 0
      span:
        range:
          start: 2
          end: 3
        file_id: 0
span:
  range:
    start: 0
    end: 3
  file_id: 0

