flux-parser/tests/snapshots/expr__parse_binops_float_plus.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        FloatLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          bits: 32
          val:
            node: 1.02
            span:
              range:
                start: 0
                end: 4
              file_id: 0
      span:
        range:
          start: 0
          end: 4
        file_id: 0
    op: Plus
    y:
      node:
        FloatLit:
          negative:
            node: false
            span:
              range:
                start: 5
                end: 6
              file_id: 0
          bits: 32
          val:
            node: 2.4014
            span:
              range:
                start: 5
                end: 12
              file_id: 0
      span:
        range:
          start: 5
          end: 12
        file_id: 0
span:
  range:
    start: 0
    end: 12
  file_id: 0

