flux-parser/tests/snapshots/expr__parse_ident_nums.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  Ident: f0o
span:
  range:
    start: 0
    end: 3
  file_id: 0

