flux-parser/tests/snapshots/expr__parse_ident_nums_seps.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  Ident: f0o_B8rr
span:
  range:
    start: 0
    end: 8
  file_id: 0

